@@ -1,3 +1,10 @@
+2004-10-19  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* ld-elf/exclude.exp: Allow cris-*-elf.
+
+	* ld-elf/exclude1.s: Add ".data". Remove "- include_sym".
+	* ld-elf/exclude2.s: Add ".data".
+
 2004-10-19  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* ld-elf/exclude.exp: Don't run for cris-*-elf.
